all function work

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <header>Rock Paper Sissor Game</header>
 <body>
     <div>Your Choice:</div>
-    <input id="choice-1" type="radio" name="button" value="rock"> Rock
-    <input id="choice-2" type="radio" name="button" value="paper"> Paper
-    <input id="choice-3" type="radio" name="button" value="scissors"> Scissors
+    <input id="choice-1" type="radio" name="button" value="Rock"> Rock
+    <input id="choice-2" type="radio" name="button" value="Paper"> Paper
+    <input id="choice-3" type="radio" name="button" value="Scissors"> Scissors
     <div>Enermy Choice:</div><span id="enermy-choice">
     <div>Result:</div><span id='Result'></span>
     </span>
