all test functions work

--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
     <div>Your Choice:</div>
     <input id="choice-1" type="radio" name="button" value="Rock"> Rock
     <input id="choice-2" type="radio" name="button" value="Paper"> Paper
-    <input id="choice-3" type="radio" name="button" value="Scissors"> Scissors
-    <div>Enermy Choice:</div><span id="enermy-choice">
-    <div>Result:</div><span id='Result'></span>
-    </span>
+    <input id="choice-3" type="radio" name="button" value="scissors"> Scissors
+    <div>Enermy Choice:<span id="enermy-choice"></span></div>
+    <nobr></nobr><div>Result:<span id='Result'></span></div>
     <button id="play-game">Let's Play!</button>
         <button id="reset-game">Reset Game</button>
 
