--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
 </head>
 <header>Rock Paper Sissor Game</header>
 <body>
-    <div>Your Choice:</div>
-    <input id="choice-1" type="radio" name="button" value="Rock"> Rock
-    <input id="choice-2" type="radio" name="button" value="Paper"> Paper
-    <input id="choice-3" type="radio" name="button" value="scissors"> Scissors
-    <div>Enermy Choice:<span id="enermy-choice"></span></div>
-    <nobr></nobr><div>Result:<span id='Result'></span></div>
+    <div class="words">Your Choice:</div>
+    <input id="choice-1" type="radio" name="button" value="Rock"><img src="./Assets/rock.png" height="100px" width="120px">
+    <input id="choice-2" type="radio" name="button" value="Paper"><img src="./Assets/paper.png" height="100px" width="120px">
+    <input id="choice-3" type="radio" name="button" value="scissors"><img src="./Assets/Scissors.png" height="100px" width="120px">
+    <div class="words">Enermy Choice:<span id="enermy-choice"></span></divclass="words">
+
+    <div class="words">Result:<span id='Result'></span></div>
     <button id="play-game">Let's Play!</button>
-        <button id="reset-game">Reset Game</button>
+    
 
 
 
