--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
-<header>Rock Paper Sissor Game</header>
+<header>Rock Paper Scissor Game</header>
 <body>
     <div class="words">Your Choice:</div>
     <input id="choice-1" type="radio" name="button" value="Rock" checked><img src="./Assets/rock.png" height="100px" width="120px">
     <input id="choice-2" type="radio" name="button" value="Paper"><img src="./Assets/paper.png" height="100px" width="120px">
-    <input id="choice-3" type="radio" name="button" value="scissors"><img src="./Assets/Scissors.png" height="100px" width="120px">
+    <input id="choice-3" type="radio" name="button" value="Scissors"><img src="./Assets/Scissors.png" height="100px" width="120px">
     <div class="words">Enemy Choice:<span id="enemy-choice"></span></div class="words">
 
     <div class="words">Result:<span id='Result'></span></div>
